--- a/src/once-ui/styles/global.scss
+++ b/src/once-ui/styles/global.scss
@@ -57,6 +57,7 @@ a {
 
     &:hover {
         text-decoration-line: underline;
+        color: #D1B000;
     }
 }
 
@@ -78,5 +79,6 @@ a {
 
     &:hover {
         background: var(--neutral-alpha-strong);
+        color: #D1B000;
     }
 }
