--- a/src/app/components/StarBackground.module.css
+++ b/src/app/components/StarBackground.module.css
@@ -2,7 +2,7 @@
 
 .starBackground {
     height: 100%;
-    background: radial-gradient(ellipse at bottom, #1B2735 0%, #090A0F 100%);
+    background: radial-gradient(ellipse at left, #1B2735 0%, #090A0F 40%);
     overflow: hidden;
     position: fixed;
     top: 0;
